' CTRL+SHIFT+X to export
' CTRL+SHIFT+W to preview

@startuml class-diagram

' Entities

class Page {
    - title: string
    - isCommentAllowed: boolean
    - isActive: boolean
    - type: string
}

class PageSection {
    - page_id: Page
    - name: string
    - isActive: boolean
}

class Block {
    - column: integer
    - name: string
    - order: integer
    - input_type: string
    - page_section_id: Section
}

class Translation {
    - locale: string
    - table: string
    - primary_key: string
    - content: text
}

' Relations
Page "One" *-- "Many" PageSection: has >
PageSection "One" *-- "Many" Block: has >


@enduml